#18 | cleanup