@@ -3,7 +3,6 @@ package com.soundid.catalog.infrastructure.persistence.inmemory;
 import com.soundid.catalog.domain.model.fingerprint.Fingerprint;
 import com.soundid.catalog.domain.model.song.SongId;
 import com.soundid.catalog.domain.repository.FingerprintRepository;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -20,6 +19,6 @@ public class InMemoryFingerprintRepository implements FingerprintRepository {
     }
 
     public Set<Fingerprint> findBySongId(@NonNull SongId songId) {
-        return database.getOrDefault(songId, Collections.emptySet());
+        return database.getOrDefault(songId, Set.of());
     }
 }
